<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity">

    <RelativeLayout
        android:id="@+id/layout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="32dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    style="@style/questionTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/question1title" />

                <TextView
                    style="@style/questionAndAnswers"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/question1" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/checkboxQuest1AnswerYellow"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/answerYellow" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/checkboxQuest1AnswerBlack"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/answerBlack" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/checkboxQuest1AnswerBlue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/answerBlue" />
                </LinearLayout>

                <TextView
                    style="@style/questionTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/question2title" />

                <TextView
                    style="@style/questionAndAnswers"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/question2" />

                <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/radio_2002"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/answer2002" />

                    <RadioButton
                        android:id="@+id/radio_2009"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/answer2009" />

                    <RadioButton
                        android:id="@+id/radio_2016"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/answer2016" />
                </RadioGroup>

                <TextView
                    style="@style/questionTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/question3title" />

                <TextView
                    style="@style/questionAndAnswers"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/question3" />

                <EditText
                    android:id="@+id/answerInputUserLastName"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/LastNameHalHint"
                    android:inputType="text"
                    android:maxLength="10" />


                <TextView
                    style="@style/questionTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/question4title" />

                <TextView
                    style="@style/questionAndAnswers"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/question4" />

                <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/radio_rage"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Rage" />

                    <RadioButton
                        android:id="@+id/radio_Hope"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Hope" />

                    <RadioButton
                        android:id="@+id/radio_Fear"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Fear" />
                </RadioGroup>


                <TextView
                    style="@style/questionTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/question5title" />

                <TextView
                    style="@style/questionAndAnswers"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/question5" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/checkboxQuestGreen"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/answerGreen" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/checkboxQuestRed"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/answerRed" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/checkboxQuestBlue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/answerBlue2" />
                </LinearLayout>

                <Button
                    android:id="@+id/submitButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/submit" />
            </LinearLayout>

        </ScrollView>
    </RelativeLayout>


</RelativeLayout>